tests/paczka1/small_fuzzy/33055928.err
Error in line 6: 6CprR S956 10,8
Error in line 9: drT S956 39,9
